--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-redux-starter-kit",
-  "version": "3.0.0-alpha.0",
-  "description": "Get started with React, Redux, and React-Router!",
+  "name": "1stg",
+  "version": "1.0.0",
+  "description": "Homepage Website powered by Technology Stack Of React-Redux!",
   "main": "index.js",
   "engines": {
     "node": ">=4.2.0",
@@ -95,7 +95,7 @@
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.9.0",
     "fs-extra": "^0.30.0",
-    "history": "^2.0.0",
+    "history": "^3.0.0",
     "html-webpack-plugin": "^2.7.1",
     "imports-loader": "^0.6.5",
     "ip": "^1.1.2",
@@ -116,7 +116,7 @@
     "redux": "^3.0.0",
     "redux-thunk": "^2.0.0",
     "rimraf": "^2.5.1",
-    "sass-loader": "^3.0.0",
+    "sass-loader": "^4.0.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.14",
@@ -130,7 +130,7 @@
     "cheerio": "^0.20.0",
     "codecov": "^1.0.1",
     "enzyme": "^2.0.0",
-    "eslint": "^2.4.0",
+    "eslint": "^3.0.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-config-standard-react": "^2.2.0",
     "eslint-plugin-babel": "^3.2.0",
