--- a/.eslintrc
+++ b/.eslintrc
@@ -1,26 +1,44 @@
 {
-  "parser"  : "babel-eslint",
-  "extends" : [
+  "parser": "babel-eslint",
+  "extends": [
     "standard",
     "standard-react"
   ],
   "plugins": [
     "babel"
   ],
-  "env"     : {
-    "browser" : true
+  "env": {
+    "browser": true
   },
-  "globals" : {
-    "__DEV__"      : false,
-    "__PROD__"     : false,
-    "__DEBUG__"    : false,
-    "__COVERAGE__" : false,
-    "__BASENAME__" : false
+  "globals": {
+    "__DEV__": false,
+    "__PROD__": false,
+    "__DEBUG__": false,
+    "__COVERAGE__": false,
+    "__BASENAME__": false
   },
   "rules": {
-    "semi" : [2, "never"],
-    "max-len": [2, 120, 2],
+    "babel/generator-star-spacing": 1,
     "generator-star-spacing": 0,
-    "babel/generator-star-spacing": 1
+    "max-len": [
+      2,
+      120,
+      2
+    ],
+    "react/jsx-space-before-closing": [
+      2,
+      "never"
+    ],
+    "semi": [
+      2,
+      "always"
+    ],
+    "space-before-function-paren": [
+      2,
+      {
+        "anonymous": "always",
+        "named": "never"
+      }
+    ]
   }
 }
