--- a/.eslintrc
+++ b/.eslintrc
@@ -19,12 +19,20 @@
   },
   "rules": {
     "babel/generator-star-spacing": 1,
+    "eol-last": 2,
     "generator-star-spacing": 0,
+    "jsx-quotes": [
+      2,
+      "prefer-double"
+    ],
+    "max-depth": 2,
     "max-len": [
       2,
       120,
       2
     ],
+    "max-nested-callbacks": 2,
+    "max-params": 2,
     "react/jsx-space-before-closing": [
       2,
       "never"
@@ -39,6 +47,9 @@
         "anonymous": "always",
         "named": "never"
       }
-    ]
+    ],
+    "object-curly-spacing": 2,
+    "array-bracket-spacing": 2,
+    "computed-property-spacing": 2
   }
 }
