优化使用 html 元素获取浏览器宽高(开发环境初始化时 body 宽高为0)

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "clean": "rimraf dist",
     "compile": "better-npm-run compile",
-    "lint": "stylelint --syntax scss src/**/*.scss && eslint src tests server",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "eslint src tests server && stylelint --syntax scss src/**/*.scss",
+    "lint:fix": "eslint src tests server --fix",
     "start": "better-npm-run start",
     "dev": "better-npm-run dev",
     "dev:no-debug": "npm run dev -- --no_debug",
