--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "scripts": {
     "clean": "rimraf dist",
     "compile": "better-npm-run compile",
-    "lint": "eslint src tests server && stylelint --syntax scss src/**/*.scss",
-    "lint:fix": "eslint src tests server --fix",
+    "eslint": "eslint .",
+    "stylelint": "stylelint --syntax scss src/**/*.scss",
+    "lint": "npm run eslint && npm run stylelint",
+    "lint:fix": "npm run eslint -- --fix",
     "start": "better-npm-run start",
     "dev": "better-npm-run dev",
     "dev:no-debug": "npm run dev -- --no_debug",
