--- a/package.json
+++ b/package.json
@@ -129,38 +129,38 @@
     "yargs": "^4.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^6.0.0-beta.6",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^5.1.0",
+    "babel-eslint": "^6.1.2",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "chai-enzyme": "^0.5.0",
     "cheerio": "^0.20.0",
     "codecov": "^1.0.1",
-    "enzyme": "^2.0.0",
-    "eslint": "^3.0.1",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-config-standard-react": "^2.2.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-promise": "^1.0.8",
-    "eslint-plugin-react": "^5.0.0",
-    "eslint-plugin-standard": "^1.3.1",
+    "enzyme": "^2.4.1",
+    "eslint": "^3.1.0",
+    "eslint-config-standard": "^5.3.5",
+    "eslint-config-standard-react": "^3.0.0",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-promise": "^2.0.0",
+    "eslint-plugin-react": "^5.2.2",
+    "eslint-plugin-standard": "^2.0.0",
     "isparta-loader": "^2.0.0",
     "karma": "^1.0.0",
     "karma-coverage": "^1.0.0",
     "karma-mocha": "^1.0.1",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-mocha-reporter": "^2.0.4",
+    "karma-phantomjs-launcher": "^1.0.1",
     "karma-webpack-with-fast-source-maps": "^1.9.2",
-    "mocha": "^2.2.5",
-    "nodemon": "^1.8.1",
-    "phantomjs-prebuilt": "^2.1.3",
-    "react-addons-test-utils": "^15.0.0",
+    "mocha": "^2.5.3",
+    "nodemon": "^1.9.2",
+    "phantomjs-prebuilt": "^2.1.7",
+    "react-addons-test-utils": "^15.2.1",
     "redbox-react": "^1.2.10",
-    "sinon": "^1.17.3",
+    "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
-    "stylelint": "^6.8.0",
-    "stylelint-config-standard": "^10.0.0",
+    "stylelint": "^7.0.2",
+    "stylelint-config-standard": "^11.0.0",
     "stylelint-scss": "^1.2.1",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.6.0"
+    "webpack-hot-middleware": "^2.12.1"
   }
 }
