--- a/package.json
+++ b/package.json
@@ -79,54 +79,54 @@
   "author": "David Zukowski <david@zuko.me> (http://zuko.me)",
   "license": "MIT",
   "dependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-core": "^6.3.17",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-runtime": "^6.3.13",
-    "babel-polyfill": "^6.9.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.3.13",
-    "babel-runtime": "^6.3.19",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.9.0",
+    "babel-runtime": "^6.9.2",
     "better-npm-run": "0.0.9",
     "bootstrap": "^3.3.6",
-    "css-loader": "^0.23.0",
-    "cssnano": "^3.3.2",
+    "css-loader": "^0.23.1",
+    "cssnano": "^3.7.3",
     "debug": "^2.2.0",
-    "extract-text-webpack-plugin": "^1.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "fonts.css": "^1.4.0",
     "fs-extra": "^0.30.0",
     "history": "^2.1.2",
-    "html-webpack-plugin": "^2.7.1",
+    "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
-    "ip": "^1.1.2",
+    "ip": "^1.1.3",
     "json-loader": "^0.5.4",
-    "koa": "^2.0.0-alpha.3",
-    "koa-connect-history-api-fallback": "^0.3.0",
+    "koa": "^2.0.0",
+    "koa-connect-history-api-fallback": "^0.3.1",
     "koa-convert": "^1.2.0",
     "koa-proxy": "^0.6.0",
     "koa-static": "^3.0.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "node-sass": "^3.7.0",
-    "normalize.css": "^4.1.1",
-    "postcss-loader": "^0.9.0",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "react-redux": "^4.0.0",
-    "react-router": "^2.2.0",
-    "react-router-redux": "^4.0.0",
-    "redux": "^3.0.0",
-    "redux-thunk": "^2.0.0",
-    "rimraf": "^2.5.1",
+    "node-sass": "^3.8.0",
+    "normalize.css": "^4.2.0",
+    "postcss-loader": "^0.9.1",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
+    "react-router-redux": "^4.0.5",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
+    "rimraf": "^2.5.3",
     "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.14",
-    "yargs": "^4.0.0"
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "yargs": "^4.8.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
@@ -144,9 +144,9 @@
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^2.0.0",
     "isparta-loader": "^2.0.0",
-    "karma": "^1.0.0",
+    "karma": "^1.1.1",
     "karma-coverage": "^1.0.0",
-    "karma-mocha": "^1.0.1",
+    "karma-mocha": "^1.1.1",
     "karma-mocha-reporter": "^2.0.4",
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-webpack-with-fast-source-maps": "^1.9.2",
