--- a/.stylelintrc
+++ b/.stylelintrc
@@ -9,7 +9,10 @@
     "selector-pseudo-class-no-unknown": [
       true,
       {
-        "ignorePseudoClasses": ":global,:local"
+        "ignorePseudoClasses": [
+          "global",
+          "local"
+        ]
       }
     ],
     "selector-pseudo-element-colon-notation": "single"
