--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "compile:server": "webpack --config build/webpack/server.babel.js --progress --hide-modules",
     "lint": "npm run lint:es",
     "lint:es": "eslint .",
-    "lint:fix": "npm run lint:es -- --fix"
+    "lint:fix": "npm run lint:es -- --fix",
+    "pm2": "cross-env NODE_ENV=production PORT=4000 pm2 start build/bin/start.js --name=react-ssr"
   },
   "dependencies": {
     "bootstrap-styl": "^5.0.8",
+    "classnames": "^2.2.5",
+    "connect-history-api-fallback": "^1.3.0",
     "history": "^3.0.0",
     "koa": "^2.0.0",
     "koa-compress": "^2.0.0",
