--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
+    "hash-sum": "^1.0.2",
     "html-webpack-plugin": "^2.28.0",
     "img-loader": "^1.3.1",
     "memory-fs": "^0.4.1",
