--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "eslint-config-react": "^1.1.7",
     "eslint-config-standard": "^8.0.0-beta.0",
     "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.0",
     "eslint-plugin-promise": "^3.4.2",
     "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.0.1",
