--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
     "bootstrap-styl": "^5.0.8",
     "classnames": "^2.2.5",
     "history": "^3.0.0",
-    "koa": "^2.0.0",
+    "koa": "^2.2.0",
     "koa-compress": "^2.0.0",
     "koa-logger": "^2.0.1",
     "koa-static": "^3.0.0",
     "nib": "^1.1.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^16.0.0-alpha.4",
+    "react-dom": "^16.0.0-alpha.4",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-lite": "^0.15.33",
-    "react-redux": "^5.0.2",
+    "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "react-router-scroll": "^0.4.1",
@@ -42,42 +42,42 @@
     "stylus-px2rem": "^1.0.11"
   },
   "devDependencies": {
-    "babel-core": "^6.23.1",
+    "babel-core": "^7.0.0-alpha.2",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.3.2",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "babel-register": "^6.23.0",
+    "babel-loader": "^7.0.0-beta.1",
+    "babel-polyfill": "^7.0.0-alpha.1",
+    "babel-preset-env": "^2.0.0-alpha.1",
+    "babel-preset-react": "^7.0.0-alpha.1",
+    "babel-preset-stage-0": "^7.0.0-alpha.1",
+    "babel-register": "^7.0.0-alpha.2",
     "babili-webpack-plugin": "^0.0.11",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.27.0",
-    "eslint": "^3.16.0",
+    "cross-env": "^3.2.4",
+    "css-loader": "^0.27.3",
+    "eslint": "^3.18.0",
     "eslint-config-react": "^1.1.7",
-    "eslint-config-standard": "^8.0.0-beta.0",
-    "eslint-plugin-babel": "^4.0.1",
+    "eslint-config-standard": "^8.0.0-beta.2",
+    "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-node": "^4.2.0",
-    "eslint-plugin-promise": "^3.4.2",
+    "eslint-plugin-node": "^4.2.1",
+    "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "file-loader": "^0.10.0",
+    "eslint-plugin-standard": "^2.1.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "hash-sum": "^1.0.2",
     "html-webpack-plugin": "^2.28.0",
     "img-loader": "^2.0.0",
     "memory-fs": "^0.4.1",
     "pug": "^2.0.0-beta11",
-    "rimraf": "^2.6.0",
+    "rimraf": "^2.6.1",
     "serialize-javascript": "^1.3.0",
-    "style-loader": "^0.14.0",
+    "style-loader": "^0.14.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.0",
-    "sw-precache-webpack-plugin": "^0.9.0",
-    "url-loader": "^0.5.7",
+    "stylus-loader": "^3.0.1",
+    "sw-precache-webpack-plugin": "^0.9.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.0"
+    "webpack-hot-middleware": "^2.17.1"
   }
 }
