--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
   - master
 
 before_install:
+- set -e
 - openssl aes-256-cbc -K $encrypted_c8d89da6ddc3_key -iv $encrypted_c8d89da6ddc3_iv -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
 - chmod 600 ~/.ssh/id_rsa
 - eval $(ssh-agent)
