--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "devDependencies": {
     "babel-core": "^7.0.0-alpha.9",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0-beta.1",
+    "babel-loader": "^7.0.0",
     "babel-polyfill": "^7.0.0-alpha.9",
     "babel-preset-env": "^2.0.0-alpha.7",
     "babel-preset-react": "^7.0.0-alpha.9",
