--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
   "dependencies": {
     "bootstrap-styl": "^5.0.8",
     "classnames": "^2.2.5",
-    "history": "^3.3.0",
+    "history": "3.3.0",
     "koa": "^2.2.0",
     "koa-compress": "^2.0.0",
     "koa-logger": "^2.0.1",
     "koa-static": "^3.0.0",
     "nib": "^1.1.2",
-    "react": "^16.0.0-alpha.10",
-    "react-dom": "^16.0.0-alpha.10",
+    "react": "^16.0.0-alpha.12",
+    "react-dom": "^16.0.0-alpha.12",
     "react-hot-loader": "^3.0.0-beta.6",
-    "react-lite": "^0.15.34",
+    "react-lite": "^0.15.35",
     "react-redux": "^5.0.4",
-    "react-router": "^3.0.5",
+    "react-router": "3.0.5",
     "react-router-redux": "^4.0.8",
     "react-router-scroll": "^0.4.2",
     "redux": "^3.6.0",
@@ -52,7 +52,7 @@
     "babel-register": "^7.0.0-alpha.9",
     "babili-webpack-plugin": "^0.0.11",
     "cross-env": "^5.0.0-beta.0",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.1",
     "eslint": "^3.19.0",
     "eslint-config-react": "^1.1.7",
     "eslint-config-standard": "^10.2.1",
@@ -68,7 +68,7 @@
     "html-webpack-plugin": "^2.28.0",
     "img-loader": "^2.0.0",
     "memory-fs": "^0.4.1",
-    "pug": "^2.0.0-beta12",
+    "pug": "^2.0.0-rc.1",
     "rimraf": "^2.6.1",
     "serialize-javascript": "^1.3.0",
     "style-loader": "^0.17.0",
