--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "lint": "npm run lint:es",
     "lint:es": "eslint .",
     "lint:fix": "npm run lint:es -- --fix",
-    "pm2": "cross-env NODE_ENV=production PORT=4000 pm2 start build/bin/start.js --name=1stg"
+    "pm2": "cross-env NODE_ENV=production PORT=4000 pm2 start build/bin/start.js --name=1stg",
+    "deploy": "bash build/bash/deploy.sh"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "bootstrap-styl": "^5.0.8",
     "classnames": "^2.2.5",
     "history": "3.3.0",
@@ -30,34 +32,36 @@
     "koa-logger": "^3.0.0",
     "koa-static": "^3.0.0",
     "nib": "^1.1.2",
-    "react": "^16.0.0-alpha.12",
-    "react-dom": "^16.0.0-alpha.12",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "react-lite": "^0.15.35",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "react-lite": "^0.15.37",
     "react-redux": "^5.0.4",
     "react-router": "3.0.5",
     "react-router-redux": "^4.0.8",
     "react-router-scroll": "^0.4.2",
     "redux": "^3.6.0",
-    "stylus-px2rem": "^1.0.11"
+    "run-in-vm": "^1.0.1",
+    "stylus-px2rem": "^1.0.13"
   },
   "devDependencies": {
-    "babel-core": "^7.0.0-alpha.9",
+    "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
-    "babel-polyfill": "^7.0.0-alpha.9",
-    "babel-preset-env": "^2.0.0-alpha.7",
-    "babel-preset-react": "^7.0.0-alpha.9",
-    "babel-preset-stage-0": "^7.0.0-alpha.9",
-    "babel-register": "^7.0.0-alpha.9",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
     "babili-webpack-plugin": "^0.1.0",
-    "cross-env": "^5.0.0-beta.0",
-    "css-loader": "^0.28.1",
+    "cross-env": "^5.0.0",
+    "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
     "eslint-config-react": "^1.1.7",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import": "^2.4.0",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.0.0",
@@ -68,15 +72,17 @@
     "html-webpack-plugin": "^2.28.0",
     "img-loader": "^2.0.0",
     "memory-fs": "^0.4.1",
-    "pug": "^2.0.0-rc.1",
+    "pug": "^2.0.0-rc.2",
+    "react-style-loader": "^1.0.1",
     "rimraf": "^2.6.1",
     "serialize-javascript": "^1.3.0",
+    "ssr-webpack-plugin": "^1.0.0",
     "style-loader": "^0.18.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "sw-precache-webpack-plugin": "^0.11.0",
+    "sw-precache-webpack-plugin": "^0.11.3",
     "url-loader": "^0.5.8",
-    "webpack": "^2.4.1",
+    "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0"
   }
