--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "html-webpack-plugin": "^2.28.0",
     "img-loader": "^2.0.0",
     "memory-fs": "^0.4.1",
+    "null-loader": "^0.1.1",
     "pug": "^2.0.0-rc.2",
     "react-style-loader": "^1.0.1",
     "rimraf": "^2.6.1",
