--- a/package.json
+++ b/package.json
@@ -27,47 +27,45 @@
     "bootstrap-styl": "^5.0.8",
     "classnames": "^2.2.5",
     "history": "3.3.0",
-    "koa": "^2.2.0",
+    "koa": "^2.3.0",
     "koa-compress": "^2.0.0",
     "koa-logger": "^3.0.0",
     "koa-static": "^3.0.0",
     "nib": "^1.1.2",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-lite": "^0.15.37",
     "react-redux": "^5.0.5",
     "react-router": "3.0.5",
     "react-router-redux": "^4.0.8",
     "react-router-scroll": "^0.4.2",
-    "redux": "^3.6.0",
-    "run-in-vm": "^1.0.1",
-    "stylus-px2rem": "^1.0.13"
+    "redux": "^3.7.0",
+    "run-in-vm": "^1.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.5.1",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "babili-webpack-plugin": "^0.1.1",
-    "cross-env": "^5.0.0",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.1.0",
-    "eslint-config-react": "^1.1.7",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
     "hash-sum": "^1.0.2",
     "html-webpack-plugin": "^2.28.0",
     "img-loader": "^2.0.0",
@@ -78,13 +76,14 @@
     "rimraf": "^2.6.1",
     "serialize-javascript": "^1.3.0",
     "ssr-webpack-plugin": "^1.0.0",
-    "style-loader": "^0.18.1",
+    "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "stylus-px2rem": "^1.0.14",
     "sw-precache-webpack-plugin": "^0.11.3",
-    "url-loader": "^0.5.8",
+    "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
-    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-middleware": "^1.11.0",
     "webpack-hot-middleware": "^2.18.0"
   }
 }
