--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ branches:
   - master
   - /^greenkeeper/.*$/
 
+cache: yarn
+
 before_install:
 - set -e
 - openssl aes-256-cbc -K $encrypted_c8d89da6ddc3_key -iv $encrypted_c8d89da6ddc3_iv -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
@@ -18,9 +20,10 @@ before_install:
 - git config --global user.name 'JounQin'
 - git config --global user.email 'liujiaren1992@vip.qq.com'
 - git push --force --quiet git@git.coding.net:JounQin/1stg.git
+- yarn global add greenkeeper-lockfile
 
-install:
-- npm i
+before_script: greenkeeper-lockfile-update
 
-script:
-- npm run lint
+script: yarn lint
+
+after_script: greenkeeper-lockfile-upload
