--- a/package.json
+++ b/package.json
@@ -26,64 +26,58 @@
     "axios": "^0.16.2",
     "bootstrap-styl": "^5.0.8",
     "classnames": "^2.2.5",
-    "history": "4.6.3",
+    "history": "^3.3.0",
     "koa": "^2.3.0",
     "koa-compress": "^2.0.0",
-    "koa-logger": "^3.0.0",
-    "koa-static": "^4.0.0",
+    "koa-logger": "^3.0.1",
+    "koa-static": "^4.0.1",
     "nib": "^1.1.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.7",
-    "react-lite": "^0.15.37",
-    "react-redux": "^5.0.5",
-    "react-router": "4.1.2",
+    "react-lite": "^0.15.38",
+    "react-redux": "^5.0.6",
+    "react-router": "^3.0.5",
     "react-router-redux": "^4.0.8",
     "react-router-scroll": "^0.4.2",
-    "redux": "^3.7.0",
+    "redux": "^3.7.2",
     "run-in-vm": "^1.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "babili-webpack-plugin": "^0.1.1",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.1.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-node": "^5.0.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.1.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "babel-register": "^6.26.0",
+    "babili-webpack-plugin": "^0.1.2",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.5",
+    "eslint": "^4.5.0",
+    "eslint-config-1stg": "^0.0.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.0.0",
+    "file-loader": "^0.11.2",
     "hash-sum": "^1.0.2",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^2.30.1",
     "img-loader": "^2.0.0",
     "memory-fs": "^0.4.1",
     "null-loader": "^0.1.1",
-    "pug": "^2.0.0-rc.2",
+    "pug": "^2.0.0-rc.3",
     "react-style-loader": "^1.0.1",
     "rimraf": "^2.6.1",
-    "serialize-javascript": "^1.3.0",
+    "serialize-javascript": "^1.4.0",
     "ssr-webpack-plugin": "^1.0.0",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "stylus-px2rem": "^1.0.14",
-    "sw-precache-webpack-plugin": "^0.11.3",
+    "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.5.9",
-    "webpack": "^3.0.0",
-    "webpack-dev-middleware": "^1.11.0",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack": "^3.5.5",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.18.2"
   }
 }
