--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env DEBUG=hi:* node build/bin/start",
-    "start": "cross-env NODE_ENV=production npm run dev",
-    "build": "rimraf dist && npm run compile",
-    "compile:base": "npm run compile:client && npm run compile:server",
-    "compile:dev": "cross-env DEBUG=hi:* npm run compile:base",
-    "compile": "cross-env NODE_ENV=production npm run compile:dev",
+    "start": "cross-env NODE_ENV=production yarn dev",
+    "build": "rimraf dist && yarn compile",
+    "compile:base": "yarn compile:client && yarn compile:server",
+    "compile:dev": "cross-env DEBUG=hi:* yarn compile:base",
+    "compile": "cross-env NODE_ENV=production yarn compile:dev",
     "compile:client": "webpack --config build/webpack/client.babel.js --progress --hide-modules",
     "compile:server": "webpack --config build/webpack/server.babel.js --progress --hide-modules",
-    "lint": "npm run lint:es",
+    "lint": "yarn lint:es",
     "lint:es": "eslint .",
-    "lint:fix": "npm run lint:es -- --fix",
+    "lint:fix": "yarn lint:es --fix",
     "pm2": "cross-env NODE_ENV=production PORT=4000 pm2 start build/bin/start.js --name=1stg",
     "deploy": "bash build/bash/deploy.sh"
   },
@@ -55,8 +55,8 @@
     "babel-register": "^6.26.0",
     "babili-webpack-plugin": "^0.1.2",
     "cross-env": "^5.0.5",
-    "css-loader": "^0.28.5",
-    "eslint": "^4.5.0",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.6.1",
     "eslint-config-1stg": "^0.0.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
@@ -65,7 +65,7 @@
     "img-loader": "^2.0.0",
     "memory-fs": "^0.4.1",
     "null-loader": "^0.1.1",
-    "pug": "^2.0.0-rc.3",
+    "pug": "^2.0.0-rc.4",
     "react-style-loader": "^1.0.1",
     "rimraf": "^2.6.1",
     "serialize-javascript": "^1.4.0",
@@ -76,8 +76,8 @@
     "stylus-px2rem": "^1.0.14",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.5",
+    "webpack": "^3.5.6",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2"
+    "webpack-hot-middleware": "^2.19.1"
   }
 }
