--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 language: node_js
+
 node_js: stable
 
 sudo: false
-
-branches:
-  only:
-  - master
-  - /^greenkeeper/.*$/
 
 cache: yarn
 
@@ -19,7 +15,7 @@ before_install:
 - cp .travis/ssh_config ~/.ssh/config
 - git config --global user.name 'JounQin'
 - git config --global user.email 'liujiaren1992@vip.qq.com'
-- git push --force --quiet git@git.coding.net:JounQin/1stg.git
+- 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then git push --force --quiet git@git.coding.net:JounQin/1stg.git master:master; fi'
 - yarn global add greenkeeper-lockfile
 
 before_script: greenkeeper-lockfile-update
