--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "react-lite": "^0.15.38",
+    "react-hot-loader": "^3.1.1",
+    "react-lite": "^0.15.39",
     "react-redux": "^5.0.6",
     "react-router": "^3.2.0",
     "react-router-redux": "^4.0.8",
@@ -49,17 +49,17 @@
     "babel-eslint": "^8.0.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "babili-webpack-plugin": "^0.1.2",
-    "cross-env": "^5.0.5",
+    "cross-env": "^5.1.0",
     "css-loader": "^0.28.7",
-    "eslint": "^4.8.0",
+    "eslint": "^4.9.0",
     "eslint-config-1stg": "^0.0.5",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "hash-sum": "^1.0.2",
     "html-webpack-plugin": "^2.30.1",
     "img-loader": "^2.0.0",
@@ -70,14 +70,14 @@
     "rimraf": "^2.6.2",
     "serialize-javascript": "^1.4.0",
     "ssr-webpack-plugin": "^1.0.0",
-    "style-loader": "^0.18.2",
+    "style-loader": "^0.19.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "stylus-px2rem": "^1.0.14",
     "sw-precache-webpack-plugin": "^0.11.4",
-    "url-loader": "^0.6.1",
-    "webpack": "^3.6.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.19.1"
+    "webpack-hot-middleware": "^2.20.0"
   }
 }
