--- a/.travis.yml
+++ b/.travis.yml
@@ -2,26 +2,15 @@ language: node_js
 
 node_js: stable
 
-sudo: false
-
 cache: yarn
 
-before_install:
-- set -e
-- openssl aes-256-cbc -K $encrypted_c8d89da6ddc3_key -iv $encrypted_c8d89da6ddc3_iv -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
-- chmod 600 ~/.ssh/id_rsa
-- eval $(ssh-agent)
-- ssh-add ~/.ssh/id_rsa
-- cp .travis/ssh_config ~/.ssh/config
-- git config --global user.name 'JounQin'
-- git config --global user.email 'liujiaren1992@vip.qq.com'
-- 'if [[ $TRAVIS_BRANCH = "master" && "$TRAVIS_PULL_REQUEST" = "false" ]]; then git push --force --quiet git@git.coding.net:JounQin/1stg.git master:master; fi'
-- yarn global add greenkeeper-lockfile
+before_install: yarn global add greenkeeper-lockfile
 
 before_script: greenkeeper-lockfile-update
 
 script:
   - yarn lint
   - yarn build
+  - 'if [[ $TRAVIS_BRANCH = "master" && "$TRAVIS_PULL_REQUEST" = "false" ]]; then yarn sync:static; fi'
 
 after_script: greenkeeper-lockfile-upload
