--- a/package.json
+++ b/package.json
@@ -1,83 +1,125 @@
 {
   "name": "1stg",
   "version": "0.0.1",
-  "private": true,
   "description": "try to learn using React with server slide render deeply",
-  "main": "index.js",
   "repository": "git@github.com:JounQin/1stg.git",
   "author": "JounQin <admin@1stg.me>",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env DEBUG=hi:* node build/bin/start",
-    "start": "cross-env NODE_ENV=production yarn dev",
-    "build": "rimraf dist && yarn compile",
-    "compile:base": "yarn compile:client && yarn compile:server",
-    "compile:dev": "cross-env DEBUG=hi:* yarn compile:base",
-    "compile": "cross-env NODE_ENV=production yarn compile:dev",
-    "compile:client": "webpack --config build/webpack/client.babel.js --progress --hide-modules",
-    "compile:server": "webpack --config build/webpack/server.babel.js --progress --hide-modules",
-    "lint": "yarn lint:es",
-    "lint:es": "eslint .",
-    "lint:fix": "yarn lint:es --fix",
-    "pm2": "cross-env NODE_ENV=production PORT=4000 pm2 start build/bin/start.js --name=1stg",
-    "deploy": "bash build/bash/deploy.sh"
+    "dev": "cross-env DEBUG=1stg:* babel-node server",
+    "build:react:client": "webpack --config=build/react.client.babel.js --colors --progress",
+    "build:react:server": "webpack --config=build/react.server.babel.js --colors --progress",
+    "build:server": "webpack --config build/server.babel.js --colors --progress",
+    "build:template": "mkdir -p dist/static && node build/template.js",
+    "build": "rimraf dist && cross-env DEBUG=1stg:* NODE_ENV=production run-p build:react:client build:react:server build:server build:template",
+    "start": "cross-env DEBUG=1stg:* NODE_ENV=production node dist/server",
+    "sync:now": "bash build/sync-now.sh",
+    "sync:pull": "bash build/sync-pull.sh",
+    "sync:push": "bash build/sync-push.sh",
+    "sync:static": "bash build/sync-static.sh",
+    "lint": "eslint . --max-warnings=10",
+    "precommit": "lint-staged"
+  },
+  "babel": {
+    "presets": ["@babel/env", "@babel/stage-0"]
+  },
+  "eslintConfig": {
+    "root": true,
+    "parser": "babel-eslint",
+    "env": {
+      "browser": true,
+      "node": true,
+      "es6": true
+    },
+    "globals": {
+      "__DEV__": false,
+      "__SERVER__": false
+    },
+    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended"]
+  },
+  "eslintIgnore": ["dist"],
+  "lint-staged": {
+    "*.{json,md}": ["prettier --write", "git add"],
+    "*.js": ["eslint --max-warnings=10 --fix", "git add"]
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "overrides": [
+      {
+        "files": "*.json",
+        "options": {
+          "printWidth": 150
+        }
+      }
+    ]
   },
   "dependencies": {
-    "axios": "^0.17.0",
-    "bootstrap-styl": "^5.0.8",
     "classnames": "^2.2.5",
-    "history": "^4.7.2",
-    "koa": "^2.3.0",
+    "cross-env": "^5.1.3",
+    "debug": "^3.1.0",
+    "koa": "^2.4.1",
+    "koa-cash": "^2.2.0",
+    "koa-compose": "^4.0.0",
     "koa-compress": "^2.0.0",
+    "koa-convert": "^1.2.0",
     "koa-logger": "^3.1.0",
-    "koa-static": "^4.0.1",
-    "nib": "^1.1.2",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.1.1",
-    "react-lite": "^0.15.39",
-    "react-redux": "^5.0.6",
+    "koa-static-cache": "^5.1.1",
+    "lru-cache": "^4.1.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
-    "react-router-redux": "^4.0.8",
-    "react-router-scroll": "^0.4.3",
-    "redux": "^3.7.2",
-    "run-in-vm": "^1.0.1"
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-dom": "^4.2.2",
+    "react-server-renderer": "^0.2.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.0",
-    "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babili-webpack-plugin": "^0.1.2",
-    "cross-env": "^5.1.0",
+    "@babel/core": "^7.0.0-beta.36",
+    "@babel/node": "^7.0.0-beta.36",
+    "@babel/preset-env": "^7.0.0-beta.36",
+    "@babel/preset-react": "^7.0.0-beta.36",
+    "@babel/preset-stage-0": "^7.0.0-beta.36",
+    "@babel/register": "^7.0.0-beta.36",
+    "apply-loader": "^2.0.0",
+    "babel-eslint": "^8.1.2",
+    "babel-loader": "^8.0.0-beta.0",
+    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
+    "babel-runtime": "^6.26.0",
     "css-loader": "^0.28.7",
-    "eslint": "^4.9.0",
-    "eslint-config-1stg": "^0.0.5",
+    "eslint": "^4.14.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.4.0",
+    "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "hash-sum": "^1.0.2",
-    "html-webpack-plugin": "^2.30.1",
+    "file-loader": "^1.1.6",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-minifier": "^3.5.8",
+    "husky": "^0.14.3",
     "img-loader": "^2.0.0",
-    "memory-fs": "^0.4.1",
-    "null-loader": "^0.1.1",
+    "koa-webpack": "^1.1.0",
+    "lint-staged": "^6.0.0",
+    "node-sass": "^4.7.2",
+    "normalize.css": "^7.0.0",
+    "npm-run-all": "^4.1.2",
+    "postcss-loader": "^2.0.10",
+    "postcss-plugin-px2rem": "^0.7.0",
+    "prettier": "^1.9.2",
+    "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
-    "react-style-loader": "^2.0.1",
+    "pug-loader": "^2.3.0",
+    "react-hot-loader": "^4.0.0-beta.12",
+    "react-style-loader": "^2.2.0",
     "rimraf": "^2.6.2",
-    "serialize-javascript": "^1.4.0",
-    "ssr-webpack-plugin": "^1.0.0",
-    "style-loader": "^0.19.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "stylus-px2rem": "^1.0.14",
+    "sass-loader": "^6.0.6",
+    "ssr-webpack-plugin": "^1.1.2",
     "sw-precache-webpack-plugin": "^0.11.4",
+    "uglifyjs-webpack-plugin": "^1.1.5",
     "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^2.0.1",
-    "webpack-hot-middleware": "^2.20.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7",
+    "webpack-merge": "^4.1.1",
+    "webpack-node-externals": "^1.6.0"
   }
 }
