--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,27 +1,20 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/env",
       {
-        "targets": {
-          "node": true,
-          "ie": 9
-        },
         "modules": false
       }
     ],
-    "stage-0",
-    "react"
+    "@babel/stage-0",
+    "@babel/react"
   ],
+  "plugins": ["react-hot-loader/babel"],
   "env": {
-    "development": {
+    "production": {
       "plugins": [
-        "react-hot-loader/babel"
+        ["transform-react-remove-prop-types", { "removeImport": true }]
       ]
     }
-  },
-  "ignore": [
-    "dist/**/*.js"
-  ],
-  "comments": false
+  }
 }
