--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     ]
   },
   "dependencies": {
+    "anujs": "^1.2.3",
     "classnames": "^2.2.5",
     "cross-env": "^5.1.3",
     "debug": "^3.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "koa": "^2.4.1",
     "koa-compose": "^4.0.0",
     "koa-compress": "^2.0.0",
