--- a/package.json
+++ b/package.json
@@ -39,6 +39,17 @@
     "*.{json,md}": ["prettier --write", "git add"],
     "*.js": ["eslint --max-warnings=10 --fix", "git add"]
   },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": null,
+      "postcss-pxtorem": {
+        "rootValue": 14,
+        "propList": ["*"],
+        "selectorBlackList": ["html"],
+        "minPixelValue": 2
+      }
+    }
+  },
   "prettier": {
     "semi": false,
     "singleQuote": true,
@@ -53,66 +64,63 @@
     ]
   },
   "dependencies": {
-    "anujs": "^1.2.6",
+    "anujs": "^1.2.9",
     "classnames": "^2.2.5",
     "cross-env": "^5.1.3",
     "debug": "^3.1.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "koa": "^2.4.1",
+    "koa": "^2.5.0",
     "koa-compose": "^4.0.0",
     "koa-compress": "^2.0.0",
     "koa-logger": "^3.1.0",
-    "koa-static-cache": "^5.1.1",
+    "koa-static-cache": "^5.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-server-renderer": "^0.2.2"
+    "react-server-renderer": "^0.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.38",
-    "@babel/node": "^7.0.0-beta.38",
-    "@babel/preset-env": "^7.0.0-beta.38",
-    "@babel/preset-react": "^7.0.0-beta.38",
-    "@babel/preset-stage-0": "^7.0.0-beta.38",
-    "@babel/register": "^7.0.0-beta.38",
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/node": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
+    "@babel/preset-react": "^7.0.0-beta.40",
+    "@babel/preset-stage-0": "^7.0.0-beta.40",
+    "@babel/register": "^7.0.0-beta.40",
     "apply-loader": "^2.0.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^8.0.0-beta.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
-    "babel-runtime": "^6.26.0",
-    "css-loader": "^0.28.9",
-    "eslint": "^4.16.0",
+    "autoprefixer": "^8.0.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^8.0.0-beta.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
+    "css-loader": "^0.28.10",
+    "eslint": "^4.18.1",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.5.0",
-    "eslint-plugin-react": "^7.6.0",
-    "file-loader": "^1.1.6",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.7.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.10",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-minifier": "^3.5.8",
+    "html-minifier": "^3.5.9",
     "husky": "^0.14.3",
-    "img-loader": "^2.0.0",
+    "img-loader": "^2.0.1",
     "koa-webpack": "^2.0.3",
     "lint-staged": "^7.0.0",
     "node-sass": "^4.7.2",
     "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.2",
-    "postcss-loader": "^2.0.10",
-    "postcss-plugin-px2rem": "^0.7.0",
-    "prettier": "^1.10.2",
-    "prop-types": "^15.6.0",
+    "postcss-loader": "^2.1.1",
+    "postcss-pxtorem": "^4.0.1",
+    "prettier": "^1.11.0",
+    "prop-types": "^15.6.1",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
-    "react-hot-loader": "^4.0.0-beta.18",
+    "react-hot-loader": "^4.0.0",
     "react-style-loader": "^2.3.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "ssr-webpack-plugin": "^1.1.2",
     "sw-precache-webpack-plugin": "^0.11.4",
-    "uglifyjs-webpack-plugin": "^1.1.6",
     "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
-    "webpack-merge": "^4.1.1",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9",
+    "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.6.0"
-  },
-  "resolutions": {
-    "react-stand-in": "4.0.0-beta.13"
   }
 }
