chore: remove unnecessary dependency classnames

--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
   },
   "dependencies": {
     "anujs": "^1.4.6",
-    "classnames": "^2.2.6",
     "cross-env": "^5.2.0",
     "debug": "^3.1.0",
     "koa": "^2.5.2",
@@ -100,6 +99,7 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-minifier": "^3.5.20",
     "husky": "^0.14.3",
+    "imagemin": "^6.0.0",
     "img-loader": "^3.0.0",
     "koa-webpack": "^5.1.0",
     "lint-staged": "^7.2.2",
