--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@now/static-build",
+      "use": "@vercel/static-build",
       "config": {
         "outputDirectory": "dist/static"
       }
